--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.2"
-    }
+    },
+	"autoload": {
+		"psr-4": { "Qireel\\Money\\": "src/" }
+	}
 }
