--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.2"
+        "phpunit/phpunit": "^7.2",
+        "mockery/mockery": "^1.1"
     },
 	"autoload": {
 		"psr-4": { "Qireel\\Money\\": "src/" }
